[gd_scene format=3 uid="uid://cgba7seers3mg"]

[ext_resource type="Script" uid="uid://3orr743rplct" path="res://scripts/ui/menu.gd" id="1_yqeox"]
[ext_resource type="Theme" uid="uid://cly8k841h5fg4" path="res://assets/game_ui.tres" id="2_vjb58"]
[ext_resource type="PackedScene" uid="uid://btit8cmtsb5e" path="res://scenes/highscores_screen.tscn" id="3_con2f"]

[node name="Menu" type="Node" unique_id=802741398]
script = ExtResource("1_yqeox")

[node name="MenuScreen" type="Control" parent="." unique_id=396558921]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuScreen" unique_id=899915367]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.094000004
anchor_top = 0.132
anchor_right = 0.906
anchor_bottom = 0.407
offset_left = 0.3999939
offset_top = 0.40000153
offset_right = -0.4000244
offset_bottom = 0.3999939
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vjb58")
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 113
text = "ASTEROIDS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="MenuScreen" unique_id=2133200292]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.328
anchor_top = 0.629
anchor_right = 0.67200005
anchor_bottom = 0.711
offset_left = 47.799988
offset_top = 9.799988
offset_right = -47.80005
offset_bottom = -9.800049
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 65
text = "New Game"

[node name="HighscoresButton" type="Button" parent="MenuScreen" unique_id=1061756937]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.284
anchor_top = 0.78900003
anchor_right = 0.716
anchor_bottom = 0.87100005
offset_left = 39.399994
offset_top = -0.2000122
offset_right = -39.400024
offset_bottom = 0.19995117
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 65
text = "Highscores"

[node name="HighscoresScreen" parent="." unique_id=697896343 instance=ExtResource("3_con2f")]
offset_left = 993.0
offset_top = 9.0
offset_right = 993.0
offset_bottom = 9.0

[connection signal="pressed" from="MenuScreen/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MenuScreen/HighscoresButton" to="." method="_on_highscores_button_pressed"]
